(08/22/07)

*** The cobalt provider was not passing command line arguments
    to the job
    
*** Added -k <kernel profile> option for cobalt. The spec attribute
    is "kernelprofile".

(08/20/07)

*** Redirection updates

(02/27/07)

*** I think Process.waitFor() can deadlock if there's too
    much stuff on std*. The processing of stdout from qstat
	is now done while the qstat process is running.

(02/14/07)

*** Fixed Cobalt

(02/12/07)

*** Initial version