@@ -14,3 +14,15 @@ cqsub=cqsub
 # The path to cqstat. The default assumes that cqstat is in PATH
 #
 cqstat=cqstat
+
+#
+# A regular expression to fetch the exit code from stderr. The 
+# exit code itself should be in a capturing group (any group). 
+# Use non-caputuring groups (?:X) for or-ing multiple alternatives. E.g.
+# (?:stuff ([0-9]*))|(?:some other stuff ([0-9]*))
+#
+# Backslashes need to be escaped. A literal . (dot; period) would be specified
+# as \\.
+#
+
+exitcode.regexp=(?:.*BG/. job exit status =\\s*([0-9]+))|(?:.*exit status = \\(([0-9]+)\\))
